<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal" 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:gravity="center_vertical"
	android:background="#ffffff"
	>
	<TextView
	    android:id="@+id/app_list_item_popup_start" 
	    android:layout_width="55dip"
	    android:layout_height="40dip"
	    android:text="@string/app_menu_popup_start"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:clickable="true"
	    android:textColor="#ffffff"
	/>
	<TextView
	    android:id="@+id/app_list_item_popup_detail" 
	    android:layout_width="55dip"
	    android:layout_height="40dip"
	    android:text="@string/app_menu_popup_detail"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:clickable="true"
	    android:textColor="#ffffff"
	    android:layout_marginLeft="1px"
	/>
	<TextView
	    android:id="@+id/app_list_item_popup_uninstall" 
	    android:layout_width="55dip"
	    android:layout_height="40dip"
	    android:text="@string/app_menu_popup_uninstall"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:clickable="true"
	    android:textColor="#ffffff"
	    android:layout_marginLeft="1px"
	/>
	<TextView
	    android:id="@+id/app_list_item_popup_move" 
	    android:layout_width="55dip"
	    android:layout_height="40dip"
	    android:text="@string/app_menu_popup_move"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:clickable="true"
	    android:textColor="#ffffff"
	    android:layout_marginLeft="1px"
	/>
	<TextView
	    android:id="@+id/app_list_item_popup_upgrade" 
	    android:layout_width="55dip"
	    android:layout_height="40dip"
	    android:text="@string/app_menu_popup_upgrade"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:clickable="true"
	    android:textColor="#ffffff"
	    android:layout_marginLeft="1px"
	/>
</LinearLayout>